--- a/Frontend/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand">Rezerwacja ping-pong</a>
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active"> 
+      <li [routerLink]="['']" class="nav-item" routerLinkActive="active"> 
         <a class="nav-link">Strona główna</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
@@ -16,26 +16,24 @@
       </div>-->
     </ul>
 
-    <!--<div class="dropdown" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>
-        Witaj placeholder!
-      </a>
+    <form  *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+      <input class="form-control mr-sm-2" type="text" name="email" placeholder="e-mail" required [(ngModel)]="model.email" >
+      <input class="form-control mr-sm-2" type="password" name="password" placeholder="hasło" required [(ngModel)]="model.password">
+      <button class="btn btn-success my-2 my-sm-0" type="submit">Zaloguj</button>
+    </form>
+    <button *ngIf="!loggedIn()" [routerLink]="['/register']" class="btn btn-success my-2 my-sm-0 ml-2">Rejestracja</button>
 
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Zalogowany!
+      </a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" > Edytuj profil</a>
         <a class="dropdown-item" > Twoje rezerwacje</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item">Wyloguj</a>
+        <a class="dropdown-item" (click)="logout()">Wyloguj</a>
       </div>
-    </div>
-  -->
-    <form  class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" name="email" placeholder="e-mail" >
-      <input class="form-control mr-sm-2" type="password" name="password" placeholder="hasło">
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Zaloguj</button>
-    </form>
-
-    <button  class="btn btn-success my-2 my-sm-0 ml-2">Rejestracja</button>
+  </div>
   </div>
 </nav>
 
