--- a/Frontend/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/src/app/nav-menu/nav-menu.component.html
@@ -29,7 +29,7 @@
       </a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" > Edytuj profil</a>
-        <a class="dropdown-item" > Twoje rezerwacje</a>
+        <a class="dropdown-item" [routerLink]="['user-reservations']"> Twoje rezerwacje</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Wyloguj</a>
       </div>
