admin panel - opening hours managment

--- a/Frontend/src/app/admin/admin-panel/admin-panel.component.html
+++ b/Frontend/src/app/admin/admin-panel/admin-panel.component.html
@@ -6,5 +6,8 @@
     <tab heading="Sale">
       <app-rooms-manager *ngIf="tabs.tabs[1].active"></app-rooms-manager>
     </tab>
+    <tab heading="Godziny otwarcia">
+      <app-opening-hours *ngIf="tabs.tabs[2].active"></app-opening-hours>
+    </tab>
   </tabset>
 </div>
