--- a/Frontend/src/app/admin/rooms-manager/rooms-manager.component.html
+++ b/Frontend/src/app/admin/rooms-manager/rooms-manager.component.html
@@ -79,7 +79,12 @@
               (ngModelChange)="draw()"
               class="form-control form-control-sm col-4 ml-2"
             />
-            <fa-icon class="ml-auto mr-3" [styles]="{'color':'red'}" (click)="deleteTable(table)" [icon]="faTimes"></fa-icon>
+            <fa-icon
+              class="ml-auto mr-3"
+              [styles]="{ color: '#ff5050' }"
+              (click)="deleteTable(table)"
+              [icon]="faTimes"
+            ></fa-icon>
           </div>
           <div class="row justify-content-around">
             <div class="col-5">
@@ -109,7 +114,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-success" (click)="addNewTable()" type="button">Dodaj nowy stół</button>
+      <button class="btn btn-primary" (click)="addNewTable()" type="button">Dodaj nowy stół</button>
     </div>
     <button type="button" (click)="saveTablesChanges()" class="btn btn-success ml-auto mt-2">Zapisz zmiany</button>
   </div>
