--- a/Frontend/src/app/nav-menu/nav-menu.component.html
+++ b/Frontend/src/app/nav-menu/nav-menu.component.html
@@ -9,8 +9,8 @@
       <li  class="nav-item" routerLinkActive="active">
         <a [routerLink]="['rooms-view']" class="nav-link"><fa-icon [icon]="faTableTennis"></fa-icon> Sale</a>
       </li>
-      <div>
-        <li class="nav-item" routerLinkActive="active">
+      <div *ngIf="loggedIn()">
+        <li *appHasRole="['Employee','Administrator']" class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/admin-panel']"><fa-icon [icon]="faUserCog"></fa-icon> Panel administratora</a>
         </li>
       </div>
@@ -19,13 +19,13 @@
     <form  *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" name="email" placeholder="e-mail" required [(ngModel)]="model.email" >
       <input class="form-control mr-sm-2" type="password" name="password" placeholder="hasło" required [(ngModel)]="model.password">
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Zaloguj</button>
+      <button class="btn btn-success my-2 my-sm-0" [disabled]="!loginForm.valid" type="submit">Zaloguj</button>
     </form>
     <button *ngIf="!loggedIn()" [routerLink]="['/register']" class="btn btn-success my-2 my-sm-0 ml-2">Rejestracja</button>
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>
-         Witaj Bartek!
+         Witaj {{authService.decodedToken.unique_name}}!
       </a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" ><fa-icon [icon]="faAddressCard"></fa-icon> Edytuj profil</a>
