--- a/Frontend/src/app/admin/reservations-list/reservations-list.component.html
+++ b/Frontend/src/app/admin/reservations-list/reservations-list.component.html
@@ -34,6 +34,20 @@
         name="pingPongTableId"
       />
     </div>
+    <div class="form-group px-1">
+      <label for="reservationStatus">Status:</label>
+      <select
+        class="form-control ml-1"
+        [(ngModel)]="reservationParams.reservationStatus"
+        id="reservationStatus"
+        name="reservationStatus"
+      >
+        <option value=""></option>
+        <option *ngFor="let status of ReservationStatus | enumToArray" [value]="status">
+          {{ status | translate }}
+        </option>
+      </select>
+    </div>
     <div class="form-inline">
       <div class="form-group btn-group px-1" dropdown>
         <button
@@ -61,11 +75,15 @@
           </li>
         </ul>
       </div>
+
       <div class="form-group px-1">
         <button type="button" class="btn btn-primary px-1" (click)="getReservationsList()">Zastosuj</button>
       </div>
       <div class="form-group px-1">
         <button type="button" class="btn btn-secondary px-1" (click)="resetFilters()">Resetuj</button>
+      </div>
+      <div class="form-group px-1">
+        <button type="button" class="btn btn-success px-1" (click)="openAddReservationModal()">Dodaj rezerwacje</button>
       </div>
     </div>
   </form>
@@ -78,17 +96,26 @@
         <th>Godzina</th>
         <th>Użytkownik</th>
         <th>Stół</th>
+        <th>Status</th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngFor="let reservation of reservations">
-        <tr class="clickable-tr" (click)="reservation.expanded = !reservation.expanded">
+        <tr
+          [ngClass]="{ 'clickable-tr': reservation.reservationStatus == ReservationStatus.Active }"
+          (click)="reservation.expanded = !reservation.expanded"
+        >
           <td>{{ reservation.start.toLocaleDateString() }}</td>
-          <td>{{ reservation.start.getHours() }}:00-{{ reservation.start.getHours() + 1 }}:00</td>
+          <td>
+            {{ reservation.start.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }) }}-{{
+              reservation.end.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })
+            }}
+          </td>
           <td>{{ reservation.userId }}</td>
           <td>{{ reservation.pingPongTableId }}</td>
+          <td>{{ ReservationStatus[reservation.reservationStatus] | translate }}</td>
         </tr>
-        <tr *ngIf="reservation.expanded">
+        <tr *ngIf="reservation.expanded && reservation.reservationStatus == ReservationStatus.Active">
           <td colspan="100%">
             <div class="row justify-content-center">
               <button type="button" class="btn btn-primary ml-3" (click)="confirmReservation(reservation)">
