--- a/Frontend/src/app/admin/opening-hours/opening-hours.component.html
+++ b/Frontend/src/app/admin/opening-hours/opening-hours.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-lg-6">
+  <div class="col-12 col-lg-7">
     <div class="table-responsive">
       <table class="table">
         <thead>
@@ -14,24 +14,26 @@
           <tr *ngFor="let hours of tempOpeningHours">
             <th>{{ (WeekDay | enumToArray)[hours.dayOfWeek] | translate }}</th>
             <td>
-              <input
-                type="number"
-                min="0"
-                max="23"
-                [disabled]="!hours.open"
+              <timepicker
+                id="start"
+                name="start"
+                [minuteStep]="15"
                 [(ngModel)]="hours.start"
-                class="form-control"
-              />
+                [disabled]="!hours.open"
+                [showMeridian]="false"
+                [showSpinners]="false"
+              ></timepicker>
             </td>
             <td>
-              <input
-                type="number"
-                min="0"
-                max="23"
-                [disabled]="!hours.open"
+              <timepicker
+                id="start"
+                name="start"
+                [minuteStep]="15"
                 [(ngModel)]="hours.end"
-                class="form-control"
-              />
+                [disabled]="!hours.open"
+                [showMeridian]="false"
+                [showSpinners]="false"
+              ></timepicker>
             </td>
             <td>
               <ui-switch [(ngModel)]="hours.open"></ui-switch>
@@ -42,7 +44,7 @@
     </div>
     <button type="submit" class="btn btn-success ml-auto" (click)="submitNewOpeningHours()">Zatwierdź zmiany</button>
   </div>
-  <div class="col-lg-6 col-12">
+  <div class="col-lg-5 col-12">
     <h5 class="h5 mt-2">Pozostałe dni w których lokal jest zamknięty:</h5>
     <div class="table-responsive">
       <table *ngIf="closingDays?.length > 0" class="table" aria-labelledby="tableLabel">
@@ -104,8 +106,8 @@
         <tbody>
           <tr *ngFor="let special of specialOpeningHours">
             <td>{{ special.day.toLocaleDateString() }}</td>
-            <td>{{ special.start }}</td>
-            <td>{{ special.end }}</td>
+            <td>{{ special.start.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }) }}</td>
+            <td>{{ special.end.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }) }}</td>
             <td>{{ special.description }}</td>
             <td>
               <button type="button" (click)="deleteSpecialOpeningHours(special)" class="btn btn-danger btn-sm ml-3">
@@ -140,25 +142,25 @@
         </div>
         <div class="form-group mx-1">
           <label class="mr-1">Start:</label>
-          <input
-            type="number"
-            min="0"
-            max="23"
-            [(ngModel)]="newSpecialOpeningHours.start"
-            class="form-control"
-            style="width: 70px;"
-          />
+          <timepicker
+          id="start"
+          name="start"
+          [minuteStep]="15"
+          [(ngModel)]="newSpecialOpeningHours.start"
+          [showMeridian]="false"
+          [showSpinners]="false"
+        ></timepicker>
         </div>
         <div class="form-group mx-1">
           <label class="mr-1">Koniec:</label>
-          <input
-            type="number"
-            min="0"
-            max="23"
-            style="width: 70px;"
-            [(ngModel)]="newSpecialOpeningHours.end"
-            class="form-control"
-          />
+          <timepicker
+          id="start"
+          name="start"
+          [minuteStep]="15"
+          [(ngModel)]="newSpecialOpeningHours.end"
+          [showMeridian]="false"
+          [showSpinners]="false"
+        ></timepicker>
         </div>
         <div class="form-group mx-1">
           <label class="mr-1">Komentarz:</label>
